<resources>
    <string name="app_name">Dream calendar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calendar">Kalendarz</string>
    <string name="menu_dreams_types">Typy snów</string>
    <string name="menu_search">Szukaj snu</string>
    <string name="previousMonth"><![CDATA[<-]]></string>
    <string name="nextMonth"><![CDATA[->]]></string>

</resources>