<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_dreams_types"
            android:icon="@drawable/ic_baseline_format_list_numbered_24"
            android:title="@string/menu_dreams_types" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />
    </group>
</menu>