<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calendar">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dreamcalendar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.dreamcalendar.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.dreamcalendar.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_dreams_types"
        android:name="com.example.dreamcalendar.ui.dreamtypes.DreamTypesFragment"
        android:label="@string/menu_dreams_types"
        tools:layout="@layout/fragment_dream_types" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.dreamcalendar.ui.search.searchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

</navigation>